--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_main.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@color/colorAccent"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.nellymincheva.indoorpositioningsystem.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Draw"
+        android:text="Get distances"
         android:id="@+id/btn_draw"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -22,13 +24,6 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/room"
-            android:textSize="35dp"
-            android:id="@+id/textView" />
 
         <ScrollView
             android:layout_width="fill_parent"
@@ -40,6 +35,49 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:background="#ffffff"
+                    android:layout_height="400dp">
+
+                    <ImageView
+                        app:srcCompat="@android:drawable/stat_sys_data_bluetooth"
+                        android:id="@+id/beacon1"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@android:color/holo_orange_light" />
+
+                    <ImageView
+                        app:srcCompat="@android:drawable/stat_sys_data_bluetooth"
+                        android:id="@+id/beacon2"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@android:color/holo_orange_dark" />
+
+                    <ImageView
+                        app:srcCompat="@android:drawable/stat_sys_data_bluetooth"
+                        android:id="@+id/beacon3"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@android:color/holo_green_light" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@mipmap/ic_launcher"
+                        android:id="@+id/user_icon"
+                        android:layout_below="@+id/beacon1"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="86dp" />
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/room"
+                    android:textSize="35dp"
+                    android:id="@+id/textView" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -114,4 +152,5 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
 </RelativeLayout>
