--- a/IndoorPositioningSystem/app/src/main/res/menu/main_menu.xml
+++ b/IndoorPositioningSystem/app/src/main/res/menu/main_menu.xml
@@ -8,8 +8,8 @@ tools:context="com.nellymincheva.indoorpositioningsystem.MainActivity" >
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
-    <item android:id="@+id/action_about"
-        android:title="@string/action_about"
+    <item android:id="@+id/action_change_map"
+        android:title="@string/action_change_map"
         android:orderInCategory="200"
         app:showAsAction="never" />
 </menu>
