--- a/IndoorPositioningSystem/app/src/main/res/values/colors.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#eceae7</color>
+    <color name="colorPrimary">#B5DEE3</color>
     <color name="colorPrimaryDark">#156c63</color>
     <color name="colorAccent">#63e3c5</color>
+    <color name="red">#de5433</color>
+    <color name="blue">#006ec7</color>
+    <color name="accentBlue">#004557</color>
 </resources>
