--- a/IndoorPositioningSystem/app/src/main/res/values/styles.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/styles.xml
@@ -3,9 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@android:color/holo_blue_light</item>
-        <item name="colorPrimaryDark">?android:attr/colorPressedHighlight</item>
-        <item name="colorAccent">?android:attr/colorMultiSelectHighlight</item>
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorPrimaryDark">@color/blue</item>
+        <item name="colorAccent">@color/blue</item>
+        <item name="android:colorBackground">@color/background_material_light</item>
     </style>
 
 </resources>
